@@ -2018,6 +2018,38 @@ Usage:  qucsedit [-r] file
 </source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>ideal rectangle current source</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>current at high pulse</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>duration of high pulses</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>duration of low pulses</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Rectangle Current</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>ideal rectangle voltage source</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>voltage of high signal</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Rectangle Voltage</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsApp</name>
@@ -2567,6 +2599,28 @@ Errores:
     <message>
         <source>Edit Schematic</source>
         <translation>Editar Esquema</translation>
+    </message>
+    <message>
+        <source>Edits the symbol for this schematic</source>
+        <translation type="unfinished">Edita los símbolos de este esquema</translation>
+    </message>
+    <message>
+        <source>Edit Circuit Symbol
+
+Edits the symbol for this schematic</source>
+        <translation type="unfinished">Editar Símbolo del circuito
+
+Edita los símbolos de este esquema</translation>
+    </message>
+    <message>
+        <source>Edits the schematic</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Edit Schematic
+
+Edits the schematic</source>
+        <translation type="unfinished"></translation>
     </message>
 </context>
 <context>
