@@ -2593,6 +2593,15 @@ Editar o símbolo para este esquemático</translation>
 Edits the schematic</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>This will delete the files
+</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>permanently! Continue ?</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsEdit</name>
